--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logofav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800;900&family=Mulish:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <title>Walnut Insurance - Life Insurace You'll Love</title>
   </head>
   <body>
     <div id="app"></div>
